I got the create new list function working.

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
       var elems = document.querySelectorAll('.fixed-action-btn');
       var instances = M.FloatingActionButton.init(
         elems, {
-        direction: 'left'
+        direction: 'left',
+        hoverEnabled: true
       });
     });
   </script>
