Fixed FAB, Modal, and ListTrash

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <title>React App</title>
 
   <script>
-    document.addEventListener('DOMContentLoaded', function () {
+    /*document.addEventListener('DOMContentLoaded', function () {
       var elems = document.querySelectorAll('.fixed-action-btn');
       var instances = M.FloatingActionButton.init(
         elems, {
@@ -40,7 +40,7 @@
         hoverEnabled: true
       });
       M.updateTextFields();
-    });
+    });*/
   </script>
 </head>
 
